fix blog contents

--- a/data/blog/breakout.mdx
+++ b/data/blog/breakout.mdx
@@ -22,7 +22,7 @@ network's output from a true game state to a series of "hallucinated" game state
 constructed with either an updated paddle or ball position. From here
 it is best to proceed by example.
 
-<img alt="An animation of where the network thinks the paddle is located" src="/images/content/breakout/paddleslowest.gif" title="Paddle hallucinations" class="img-responsive" />
+<img alt="An animation of where the network thinks the paddle is located" src="/static/images/blog/content/breakout/paddleslowest.gif" title="Paddle hallucinations" class="img-responsive" />
 
 In the animation shown above, we removed the true paddle location
 from each frame. The
@@ -37,10 +37,10 @@ matter because the agent can always move the paddle to the ball before it is too
 
 <div class="row">
   <div class="col-sm-3">
-    <img alt="Hallucination of ball position 1" src="/images/content/breakout/realityslow.gif" title="Ball hallucinations" class="img-responsive" />
+    <img alt="Hallucination of ball position 1" src="/static/images/blog/content/breakout/realityslow.gif" title="Ball hallucinations" class="img-responsive" />
   </div>
   <div class="col-sm-3">
-    <img alt="Hallucination of ball position 1" src="/images/content/breakout/ballslow.gif" title="Ball hallucinations" class="img-responsive" />
+    <img alt="Hallucination of ball position 1" src="/static/images/blog/content/breakout/ballslow.gif" title="Ball hallucinations" class="img-responsive" />
   </div>
 </div>
 
@@ -59,4 +59,6 @@ screen.
 
 ---
 
-Note: contact me if you want to continue this work. We had to hack through several implementation issues to generate this analysis. You will want our notes.
+It would appear this work continued at Oregon State after we defended our PhDs!
+
+[Visualizing and Understanding Atari Agents. Samuel Greydanus, Anurag Koul, Jonathan Dodge, Alan Fern Proceedings of the 35th International Conference on Machine Learning, PMLR 80:1792-1801, 2018.](http://proceedings.mlr.press/v80/greydanus18a/greydanus18a.pdf)
