--- a/data/blog/my-ai-summer.mdx
+++ b/data/blog/my-ai-summer.mdx
@@ -11,7 +11,7 @@ icon: FaPlane
 What follows is a partial retelling of my personal and professional pathway through 2017.
 
 <figure>
-  <img width="100%" src="/images/content/ai_summer/December_18_2016.jpg" />
+  <img width="100%" src="/static/images/blog/content/ai_summer/December_18_2016.jpg" />
   <figcaption>December 16th, 2016. A cold walk by the river in Oregon before heading to warmer climes.</figcaption>
 </figure>
 
@@ -20,14 +20,14 @@ What follows is a partial retelling of my personal and professional pathway thro
 In December of 2016, I chose to defer my PhD defense date by three months. I had received an offer I could not refuse: moving to Orange County to develop machine learning capacity for a startup. I had *always* wanted to live/work near the beach, so it looked like a great deal-- skipping winter, living on the beach, and building a startup. I signed a 3 month lease on the [Balboa Peninsula](https://goo.gl/maps/F4JQS9rgmFP2) and arrived to this beautiful sunset.
 
 <figure>
-  <img width="100%" src="/images/content/ai_summer/January_2nd.jpg" />
+  <img width="100%" src="/static/images/blog/content/ai_summer/January_2nd.jpg" />
   <figcaption>January 2nd, 2017. Viewing the sunset of my PhD career before starting work in Orange County.</figcaption>
 </figure>
 
 The next day, I showed up to work and was told the company needed to cut all contingent positions, including my own. Apparently a board meeting over the holidays resulted in a change of direction and *I didn't have a job!* I had __accidentally moved to Orange County!__ As it would turn out, this was a lucky break. During boom times there is always another opportunity. The AI summer would provide.
 
 <figure>
-  <img width="35%" src="/images/content/ai_summer/January_3rd.jpg" />
+  <img src="/static/images/blog/content/ai_summer/January_3rd.jpg" />
   <figcaption>Post layoff on January 3rd, 2017. I turned to my usual outlet for figuring out life-- distance running. I believe I took this picture to reassure my mother that <a href="https://i.imgur.com/OtBZnfd.jpg" target="_blank">everything was fine</a>.</figcaption>
 </figure>
 
@@ -42,7 +42,7 @@ In my first two weeks I read project proposals and developed strategy for execut
 Still, there have been tremendous opportunities through involvement in the prize. One of the most enjoyable was helping organize a United Nations summit on "AI for Good." I served as rapporteur for several panels and had the opportunity to present panel findings to the assembled body. My favorite moments were the late hours with some of the most noted AI researchers of our time debating how to best steer AI development towards the greater good.
 
 <figure>
-    <img width="80%" src="/images/content/ai_summer/June_8th.jpg" />
+    <img src="/static/images/blog/content/ai_summer/June_8th.jpg" />
   <figcaption>June 8th, 2017. On my way to an evening reception at the UN building in Geneva, Switzerland. It was a wonderful week of collaboration with leaders from academic AI, industrial AI, NGOs, and intergovernmental organizations. All the attendees were concerned with steering AI development towards improving the world. As a longtime ethical "hacker," it was excellent to participate in what can be described as a great awaking of the capacity for technology to produce good and bad outcomes in the world.
       (You can learn more about this event from the <a href="https://www.itu.int/en/ITU-T/AI/Pages/201706-programme.aspx">online program</a>).</figcaption>
 </figure>
@@ -50,7 +50,7 @@ Still, there have been tremendous opportunities through involvement in the prize
 The summit (which took place in Geneva) also afforded me the opportunity to stop by the tomb of a distant "academic ancestor" in Basel, Switzerland. In PhD programs you are paired with an "advisor" that chairs the panel of academics deciding whether you are worthy to join the club. The chain of PhD advisors goes back centuries. Visiting the tomb in Switzerland served as an excellent place to reflect on my grad school career, and think about the impending PhD defense.
 
 <figure>
-        <img width="40%" src="/images/content/ai_summer/June_5th.jpg" />
+        <img src="/static/images/blog/content/ai_summer/June_5th.jpg" />
   <figcaption>June 5th, 2017. I visit my great-great-great-...grand advisor, 
  <a href="https://en.wikipedia.org/wiki/Erasmus">Erasmus Von Rotterdam</a>. Mathematicians keep <a href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=125938">very good records</a> about PhD advisors through the centuries.</figcaption>
 </figure>
@@ -60,13 +60,13 @@ The summit (which took place in Geneva) also afforded me the opportunity to stop
 While organizing the IBM Watson AI XPRIZE, I was also writing up the last of my dissertation. In the week of my defense, I flew from Switzerland to present at [RLDM](/papers/RLDM.pdf) (a reinforcement learning an neuroscience conference in Ann Arbor), then joined my family assembling in Oregon for what felt like the academic equivalent of a wedding reception.
 
 <figure>
-    <a href="/images/content/ai_summer/Defense.jpg" target="_blank">
-    <img width="100%" src="/images/content/ai_summer/Defense.jpg" /></a>
+    <a href="/static/images/blog/content/ai_summer/Defense.jpg" target="_blank">
+    <img width="100%" src="/static/images/blog/content/ai_summer/Defense.jpg" /></a>
   <figcaption>June 16th, 2017. Defending my PhD with 14 family members in attendance. I got to talk for an hour about wildfire public policy, computation, and everything in between. I plan on posting a short summary of my PhD research when a forthcoming book chapter on artificial intelligence for conservation problems is published. You might notice I am wearing the same clothing as the photo seen above. Thankfully I was able to plan a stopover to launder my clothes...</figcaption>
 </figure>
 
 <figure>
-    <img width="100%" src="/images/content/ai_summer/June_25th.jpg" />
+    <img width="100%" src="/static/images/blog/content/ai_summer/June_25th.jpg" />
   <figcaption>June 25th, 2017. Farewell Oregon! Oregonians have a very peculiar attachment to their <a href="https://en.wikipedia.org/wiki/Portland_International_Airport_carpet">airport carpets</a>. It is traditional to take a picture of your feet on the carpet when transiting the airport. Astute observers will note my photo shows the carpet that was replaced more than a year ago...except in the regional jet terminal. #Vintage!</figcaption>
 </figure>
 
@@ -76,26 +76,26 @@ While organizing the IBM Watson AI XPRIZE, I was also writing up the last of my 
 A week after defending my PhD, my XPRIZE work was in a quiet period. My only responsibilities were recruiting the panel of 30+ judges, so I traveled south to NASA Ames for 2 months of modeling solar flare activity! I enjoyed working a new problem and exploring how AI could potentially help protect the planet from [solar disaster](https://en.wikipedia.org/wiki/Solar_storm_of_1859).
 
 <figure>
-    <a href="/images/content/ai_summer/fdl_circle.png" target="_blank"><img width="60%" src="/images/content/ai_summer/fdl_circle.png" /></a>
+    <a href="/static/images/blog/content/ai_summer/fdl_circle.png" target="_blank"><img src="/static/images/blog/content/ai_summer/fdl_circle.png" style={{backgroundColor:"white"}}/></a>
   <figcaption>Summer 2017 at the <a href="https://www.fastcompany.com/40498881/nasa-silicon-valley-ai-frontier-development-lab" target="_blank">NASA Frontier Development Lab</a> collected researchers in the planetary sciences and artificial intelligence. My role was to <a href="/papers/NIPS17.pdf">develop deep learning approaches to solar modeling</a>. As far as research experiences go, it was a bit of a boiler room. We had a tight timelines with high pressure. Thankfully, you can work pretty quickly when you are elbow to elbow with noted heliophysicists and the PIs on the satellite instrument you are working with. :)</figcaption>
 </figure>
 
 <figure>
-    <img width="70%" src="/images/content/ai_summer/June_28th.jpg" />
+    <img width="70%" src="/static/images/blog/content/ai_summer/June_28th.jpg" />
   <figcaption>June 28th, 2017. The most unusual part of the summer was the living environment. We lived on the derelict portion of <a href="https://goo.gl/maps/zqvHtdiWfsM2" target="_blank">NASA Ames</a>. During the evenings we would explore the base and find abandoned oddities. We found an old-style McDonalds building that now houses a lunar image recovery project. The building underwent minimal reconfiguration internally. The menu board is still in place and contains images of the moon instead of images of all-beef patties. The wireframe structure in the background is an old dirigible hangar that has been stripped of its cover. Other highlights include abandoned alternative energy projects, an abandoned 1960s gas station, and several space-related startups in old lab space. The inner-part of NASA Ames has the up-to-date equipment, including giant wind tunnels, simulators, supercomputers, quantum computers, and more!</figcaption>
 </figure>
 
 Continuing the solar theme to the year, I had long planned on standing in the [path of totality](https://eclipse2017.nasa.gov/2017-path-totality) for the 2017 solar eclipse. So naturally, in the same week where we presented our results from the summer's solar modeling efforts, I flew to the path of totality to watch the sun disappear. It was a transcendental experience to see the coronal loops surrounding an occluded sun. It imparts a sense of depth to the universe that I imagine being similar to the experience of entering orbit.
 
 <figure>
-   <img width="30%" src="/images/content/ai_summer/Eclipse.png" />
+   <img width="30%" src="/static/images/blog/content/ai_summer/Eclipse.png" />
   <figcaption>August 21st, 2017. The Eclipse as viewed from an airfield in southern Kentucky. Everyone should be in the path of totality at least once in their life. It is a completely different experience from seeing 99 percent of the sun disappear.</figcaption>
 </figure>
 
 My chosen location for the eclipse viewing was southern Kentucky. I had never been to that part of the country before and the trip gave me the opportunity to see many bourbon distilleries in person. I was particularly surprised by how we could stick our hands into giant sour mash tanks and taste the product that would soon be fermented into alcohol.
 
 <figure>
-    <img width="60%" src="/images/content/ai_summer/August_22nd.jpg" />
+    <img width="60%" src="/static/images/blog/content/ai_summer/August_22nd.jpg" />
   <figcaption>August 22nd, 2017. Sour mash getting piped into giant aerated tanks. We were told not to fall into the tanks since they are so aerated it is impossible to swim to the surface...a horror version of Charlie and the Chocolate Factory.</figcaption>
 </figure>
 
@@ -104,14 +104,14 @@ My chosen location for the eclipse viewing was southern Kentucky. I had never be
 After getting back from the eclipse viewing, it was time for three big trips. First, I traveled to Pittsburgh to keynote the Thrival Innovation Festival. The first day of the festival explored the power for AI to change the world. My presentation centered on the "AI for Good" movement broadly, and the work of the XPRIZE teams in particular. While wandering by buskers in front of ancient greek facades at the Carnegie Museum of Art, it became clear that AI had somehow become cool. Our talks and panels on artificial intelligence opened a music festival headlined by Wiz Khalifa and many musical acts that are apparently quite popular outside the ivory tower.
 
 <figure>
-    <img width="50%" src="/images/content/ai_summer/September_29th.jpg" />
+    <img width="50%" src="/static/images/blog/content/ai_summer/September_29th.jpg" />
   <figcaption>September 29th, 2017. The Thrival Innovation Festival was split between technology and music components. This picture was taken at a derelict steel furnace playing host to the music portion of the festival. I have never had such a feeling of being stuck in a cyberpunk-steampunk mashup.</figcaption>
 </figure>
 
 After Thrival I had two responsibilities. The first was repackaging my dissertation into a forthcoming book chapter titled, "Connecting Conservation Research and Implementation: Building a Wildfire Assistant". The second was representing the XPRIZE Foundation at the [Partnership on AI](https://www.partnershiponai.org/) in Berlin. I have always liked the idea of expatriating to write a book, so I traveled to Berlin early and summarized my graduate research from the lounge of a hostel boat on the Spree.
 
 <figure>
-    <img width="65%" src="/images/content/ai_summer/October_24th.jpg" />
+    <img width="65%" src="/static/images/blog/content/ai_summer/October_24th.jpg" />
   <figcaption>October 24th, 2017. The Partnership on AI is an organization founded by Amazon, Apple, Google, Facebook, IBM, and Microsoft, but the leadership is split 50/50 between these tech companies and non-profits. The goal is to collaboratively work to produce the greatest social benefit from AI while avoiding the greatest harms. It was a tremendous honor to affix my signature to this document with people whose systems touch the lives of nearly everyone on earth.</figcaption>
 </figure>
 
@@ -130,6 +130,6 @@ Also excellent: the work does not preclude me from continuing involvement with m
 I'm back!
 
 <figure>
-    <img width="100%" src="/images/content/ai_summer/end.jpg" />
+    <img width="100%" src="/static/images/blog/content/ai_summer/end.jpg" />
   <figcaption>January 20th, 2018. I made it back to the beach. On this uncharacteristically cold day, I went on a barefoot beach run with a beautiful sunset over Catalina Island in the background. Come visit!</figcaption>
 </figure>
