added ability to highlight

--- a/data/cv/Papers/0RLDM.mdx
+++ b/data/cv/Papers/0RLDM.mdx
@@ -7,6 +7,7 @@ bibtex: "@inproceedings{Mcgregor2017,address = {Ann Arbor},author = {McGregor, S
 citation: "McGregor, S., Houtman, R., Montgomery, C., Metoyer, R., & Dietterich, T. G. (2017). Visualizing High-Dimensional MDPs with Model-Free Monte Carlo. In The Multi-disciplinary Conference on Reinforcement Learning and Decision Making (RLDM). Ann Arbor."
 paper: /static/papers/RLDM.pdf
 hide_tags: cv-tag-peer-reviewed cv-tag-conference cv-tag-talk cv-tag-poster cv-tag-application cv-tag-ml cv-tag-compsust cv-tag-rl cv-tag-visualization cv-tag-safety
+highlight: true
 ---
 import {ReactIconInline} from "components/Icons"
 
