--- a/data/cv/Presentations/00000_tinyml.mdx
+++ b/data/cv/Presentations/00000_tinyml.mdx
@@ -6,6 +6,7 @@ venue: tinyML Awards 2021
 video: https://youtu.be/uqR2MjucNw4?t=3069
 hide_tags: cv-tag-talk cv-tag-invited cv-tag-competition
 year: "2021"
+highlight: true
 ---
 Among my greatest professional honors was representing Syntiant at tinyML in competition with industry heavyweights. tinyML is the premiere [industry group](https://www.tinyml.org/) dedicated to running machine learning solutions on-device,
 
