--- a/data/cv/Service/4_AIMI.mdx
+++ b/data/cv/Service/4_AIMI.mdx
@@ -2,6 +2,7 @@
 title: "AI and Media Integrity Steering Committee"
 year: "2019-Present"
 hide_tags: cv-tag-ethics cv-tag-dl cv-tag-ml
+highlight: true
 ---
 A group originally called together to steer Facebook's [Deepfake Detection Challenge](https://ai.facebook.com/datasets/dfdc/), we have continued meeting weekly after the completion of the competition to inform the Partnership on AI's efforts in ensuring deepfake detectors are appropriately developed.
 
