improved CV presentation

--- a/data/cv/Service/IAAI23.mdx
+++ b/data/cv/Service/IAAI23.mdx
@@ -1,7 +1,10 @@
 ---
-title: "Program Committee Member, IAAI"
+title: "Co-Chair, Program Committee Member, IAAI"
 venue: The Thirty-Fifth Annual Conference on Innovative Applications of Artificial Intelligence (IAAI-23)
-year: "2023"
+year: "2023-Present"
 hide_tags: cv-tag-peer-reviewed cv-tag-application cv-tag-ml cv-tag-compsust cv-tag-workshop cv-tag-conference cv-tag-ethics cv-tag-safety
+highlight: true
 ---
-I served on the program committee for this conference focused on the deployment concerns of artificial intelligence models.
+I serve on the program committee for this conference focused on the deployment concerns of artificial intelligence models.
+
+For the 2025 convening, I served as a co-chair for the conference.
