--- a/data/cv/Service/NIPS19.mdx
+++ b/data/cv/Service/NIPS19.mdx
@@ -1,5 +1,5 @@
 ---
-title: "General Organizer"
+title: "Organizer, NeurIPS Joint Workshop on AI for Social Good"
 venue: Neural Information Processing Systems (NeurIPS) Joint Workshop on AI for Social Good
 year: "2019"
 hide_tags: cv-tag-peer-reviewed cv-tag-application cv-tag-ml cv-tag-compsust cv-tag-workshop cv-tag-conference cv-tag-ethics cv-tag-safety
