--- a/data/cv/Service/NIPS19_social.mdx
+++ b/data/cv/Service/NIPS19_social.mdx
@@ -1,5 +1,5 @@
 ---
-title: "General Organizer of NeurIPS Social"
+title: "Organizer, NeurIPS Social"
 venue: Neural Information Processing Systems (NeurIPS) Socials
 year: "2019"
 hide_tags: cv-tag-peer-reviewed cv-tag-application cv-tag-ml cv-tag-compsust cv-tag-conference cv-tag-ethics cv-tag-safety
